@@ -1,6 +1,7 @@
 1.16.4
 ____
 - Parse the token expiration as utc timestamp
+- Add composed only flag to latest hash analysis
 
 1.16.3
 ____
